--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,7 @@ email: totogonzalezfernandez@gmail.com
 description: > #"codecademy website"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+github_username:  Herobrine2005
 
 # Build settings
 markdown: kramdown
